// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`PnpmWorkspaceFile allowBuilds functionality generates workspace file with allowBuilds 1`] = `
"allowBuilds:
  '@parcel/watcher': true
  esbuild: true
  fsevents: false
packages:
  - projects/app1
"
`;

exports[`PnpmWorkspaceFile allowBuilds functionality generates workspace file with allowBuilds and catalogs 1`] = `
"allowBuilds:
  esbuild: true
catalogs:
  default:
    react: ^18.0.0
packages:
  - projects/app1
"
`;

exports[`PnpmWorkspaceFile allowedDeprecatedVersions functionality generates workspace file with allowedDeprecatedVersions 1`] = `
"allowedDeprecatedVersions:
  querystring: '*'
packages:
  - projects/app1
"
`;

exports[`PnpmWorkspaceFile basic functionality generates workspace file with packages only 1`] = `
"packages:
  - projects/app1
  - projects/app2
"
`;

exports[`PnpmWorkspaceFile catalog functionality can update catalogs after initial creation 1`] = `
"catalogs:
  default:
    react: ^18.2.0
    react-dom: ^18.2.0
packages:
  - projects/app1
"
`;

exports[`PnpmWorkspaceFile catalog functionality generates workspace file with default catalog only 1`] = `
"catalogs:
  default:
    react: ^18.0.0
    react-dom: ^18.0.0
    typescript: ~5.3.0
packages:
  - projects/app1
"
`;

exports[`PnpmWorkspaceFile catalog functionality generates workspace file with named catalogs 1`] = `
"catalogs:
  backend:
    express: ^4.18.0
    fastify: ^4.26.0
  default:
    typescript: ~5.3.0
  frontend:
    vue: ^3.4.0
    vue-router: ^4.2.0
packages:
  - projects/app1
"
`;

exports[`PnpmWorkspaceFile catalog functionality handles empty catalog object 1`] = `
"packages:
  - projects/app1
"
`;

exports[`PnpmWorkspaceFile catalog functionality handles scoped packages in catalogs 1`] = `
"catalogs:
  default:
    '@rushstack/node-core-library': ~5.0.0
    '@types/cookies': ^0.7.7
    '@types/node': ~22.9.4
packages:
  - projects/app1
"
`;

exports[`PnpmWorkspaceFile catalog functionality handles undefined catalog 1`] = `
"packages:
  - projects/app1
"
`;

exports[`PnpmWorkspaceFile combined pnpm 11 settings generates workspace file with all relocated settings together 1`] = `
"allowBuilds:
  esbuild: true
allowedDeprecatedVersions:
  querystring: '*'
catalogs:
  default:
    react: ^18.0.0
overrides:
  foo@1.0.0: 1.0.1
packageExtensions:
  react@*:
    dependencies:
      foo: 1.0.0
packages:
  - projects/app1
patchedDependencies:
  lodash@4.17.21: patches/lodash@4.17.21.patch
peerDependencyRules:
  allowedVersions:
    react: '18'
"
`;

exports[`PnpmWorkspaceFile minimumReleaseAge functionality generates workspace file with minimumReleaseAge 1`] = `
"minimumReleaseAge: 20160
packages:
  - projects/app1
"
`;

exports[`PnpmWorkspaceFile minimumReleaseAge functionality generates workspace file with minimumReleaseAge and minimumReleaseAgeExclude 1`] = `
"minimumReleaseAge: 1440
minimumReleaseAgeExclude:
  - webpack
  - '@myorg/*'
packages:
  - projects/app1
"
`;

exports[`PnpmWorkspaceFile minimumReleaseAge functionality generates workspace file with minimumReleaseAgeExclude only 1`] = `
"minimumReleaseAgeExclude:
  - webpack
packages:
  - projects/app1
"
`;

exports[`PnpmWorkspaceFile overrides functionality generates workspace file with overrides 1`] = `
"overrides:
  bar: ^2.0.0
  foo@1.0.0: 1.0.1
packages:
  - projects/app1
"
`;

exports[`PnpmWorkspaceFile packageExtensions functionality generates workspace file with packageExtensions 1`] = `
"packageExtensions:
  react@*:
    dependencies:
      foo: 1.0.0
packages:
  - projects/app1
"
`;

exports[`PnpmWorkspaceFile patchedDependencies functionality generates workspace file with patchedDependencies 1`] = `
"packages:
  - projects/app1
patchedDependencies:
  lodash@4.17.21: patches/lodash@4.17.21.patch
"
`;

exports[`PnpmWorkspaceFile peerDependencyRules functionality generates workspace file with peerDependencyRules 1`] = `
"packages:
  - projects/app1
peerDependencyRules:
  allowedVersions:
    react: '18'
  ignoreMissing:
    - baz
"
`;
